# waha

./: Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs
assets/: main.css
src/: main.rs
templates/: another-page.html  base.html  hello.html  todo-form.html
